== In Git

=== Changes
* No more dependencies on external ANSI escape libraries (Ruby:term-ansicolor, Java:Jansi). DIY is better! (Aslak Hellesøy)

== 2.3.2 (2010-12-05)

(Somehow 2.3.1 was released improperly shortly after 2.3.0 - not sure what fixes went into that!)

=== Bugfixes
* Preserve whitespace in descriptions. Leading whitespace in descriptions are stripped upto preceding keyword + 2 spaces (#87 Matt Wynne, Gregory Hnatiuk, Aslak Hellesøy)
* Fix incorrect indentation of Examples descriptions (Gregory Hnatiuk)
* Can't define new line characters in Example Table Cell's Content. (#85 George Montana Harkin, Aslak Hellesøy)

== 2.3.0 (2010-11-12)

=== New Features
* New aliases for Scenario Outline in Swedish, Norwegian and English. (Peter Krantz, Aslak Hellesøy)
* Improved build documentation for people who want to contribute. (Aslak Hellesøy)
* Results can now be outputted/parsed in JSON. (Aslak Hellesøy)
* JSON output now contains optional "match", "result" and "embeddings" elements underneath each step. (Aslak Hellesøy)
* Added support for Base64 encoded embeddings in JSON representation. Useful for screenshots etc. (Aslak Hellesøy)

== 2.2.9 (2010-10-15)

=== New Features
* PrettyFormatter can format features both with and without ANSI Colors. Using Jansi on Java. (Aslak Hellesøy)
* Extended Java Formatter API with a steps(List<Step>) method for better reporting in Java (Aslak Hellesøy)

== 2.2.8 (2010-10-04)

=== Removed Features
* Trollop based CLI - didn't find a good use for it yet. (Aslak Hellesøy)

== 2.2.7 (2010-10-01)

=== Bugfixes
* I18n.getCodeKeywords() on Java didn't strip '!'. Not anymore. (Aslak Hellesøy)

== 2.2.6 (2010-10-01)

=== Bugfixes
* I18n.getCodeKeywords() on Java included '*'. Not anymore. (Aslak Hellesøy)

== 2.2.5 (2010-10-01)

=== New Features
* Gherkin will scan all top comments for the language comment. (Aslak Hellesøy)

== 2.2.4 (2010-09-22)

=== Bugfixes
* C99 features used by gherkin code (#75 Graham Agnew)
