@@ -5,18 +5,24 @@ import gherkin.formatter.Reporter;
 
 public class Result extends Mappable {
     private final String status;
+    private final long duration;
     private final String error_message;
-    public static final Result SKIPPED = new Result("skipped", null);
-    public static final Result UNDEFINED = new Result("undefined", null);
+    public static final Result SKIPPED = new Result("skipped", 0, null);
+    public static final Result UNDEFINED = new Result("undefined", 0, null);
 
 
-    public Result(String status, String errorMessage) {
+    public Result(String status, long duration, String errorMessage) {
         this.status = status;
+        this.duration = duration;
         this.error_message = errorMessage;
     }
 
     public String getStatus() {
         return status;
+    }
+
+    public long getDuration() {
+        return duration;
     }
 
     public String getErrorMessage() {
