@@ -40,11 +40,11 @@ module Gherkin
 
         step1 = Model::Step.new([], "Given ", "some stuff", 5)
         match1 = Model::Match.new([], "features/step_definitions/bar.rb:56")
-        result1 = Model::Result.new('passed', nil)
+        result1 = Model::Result.new('passed', 22, nil)
 
         step2 = Model::Step.new([], "When ", "foo", 6)
         match2 = Model::Match.new([], "features/step_definitions/bar.rb:96")
-        result2 = Model::Result.new('passed', nil)
+        result2 = Model::Result.new('passed', 33, nil)
 
         @f.steps([step1, step2])
         @f.scenario(Model::Scenario.new([], [], "Scenario", "The scenario", "", 4))
@@ -73,7 +73,7 @@ module Gherkin
         @f.feature(Model::Feature.new([], [], "Feature", "Hello", "World", 1))
         step = Model::Step.new([], "Given ", "some stuff that is longer", 5)
         match = Model::Match.new([], "features/step_definitions/bar.rb:56")
-        result = Model::Result.new('passed', nil)
+        result = Model::Result.new('passed', 0, nil)
 
         @f.steps([step])
         @f.scenario(Model::Scenario.new([], [], "Scenario", "The scenario", "", 4))
@@ -93,7 +93,7 @@ module Gherkin
       it "should highlight arguments for regular steps" do
         step = Model::Step.new([], "Given ", "I have 999 cukes in my belly", 3)
         match = Model::Match.new([Gherkin::Formatter::Argument.new(7, '999')], nil)
-        result = Model::Result.new('passed', nil)
+        result = Model::Result.new('passed', 6, nil)
 
         @f.steps([step])
         @f.step(step)
