@@ -2,6 +2,7 @@
 
 === Changes
 * No more dependencies on external ANSI escape libraries (Ruby:term-ansicolor, Java:Jansi). DIY is better! (Aslak Hellesøy)
+* Added duration (in millseconds) to Result. (Aslak Hellesøy)
 
 == 2.3.2 (2010-12-05)
 
